tz-webapp/deployment.yaml
# SPDX-License-Identifier: Apache-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tz-webapp
  namespace: processor
  labels:
    app: tz-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tz-webapp
  template:
    metadata:
      name: tz-webapp
      labels:
        app: tz-webapp
      annotations:
        prometheus.io.scrape: 'false'
    spec:
      containers:
        - name: tz-webapp
          image: batzorig825/tz-webapp:dev
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: frmpullsecret
      schedulerName: default-scheduler
      enableServiceLinks: false
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
