tz-webapp/service.yaml
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Service
metadata:
  name: tz-webapp
  namespace: processor
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: tz-webapp
  type: NodePort
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
